--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Over-Do-It</name>
+	<name>test</name>
 	<comment>Project main created by Buildship.</comment>
 	<projects>
 	</projects>
