update contents for panels

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "appTitle" : "TaskList",
+  "appTitle" : "Over-Do-It",
   "logLevel" : "INFO",
   "userPrefsFilePath" : "preferences.json",
   "taskListFilePath" : "data/tasklist.xml",
